[package]
name = "geoip-server"
version = "0.1.0"
authors = ["Angelos Bouklis <a.bouklis@msensis.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["tracing", "macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
maxminddb = { version = "0.26.0", features = ["mmap"] }
clap = { version = "4.5.48", features = ["derive"] }
serde_json = "1.0.145"

[[bin]]
name = "geoip-server"
